--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
     </div>
   </div>
  </div>
-  <script>
-    let currentDisplay = '';
-    document.querySelector('#display').value = currentDisplay;
-  </script>
+  <script src = "script.js"></script>
 </body>
 </html>
